[tool.poetry]
name = "asyncexperiments"
package-mode = false
version = "0.1.0"
description = ""
authors = ["DeminAnton <demantser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
